--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,7 @@ itsdangerous==1.1.0
 Jinja2==2.10.3
 MarkupSafe==1.1.1
 Werkzeug==0.16.0
+psycopg2==2.8.3
+psycopg2-binary==2.8.3
+Flask-Migrate==2.5.2
+Flask-SQLAlchemy==2.4.1
