--- a/requirements.txt
+++ b/requirements.txt
@@ -21,7 +21,9 @@ pylint==2.4.3
 python-dateutil==2.8.0
 python-dotenv==0.10.3
 python-editor==1.0.4
+redis==3.3.11
 requests==2.9.1
+rq==1.1.0
 six==1.12.0
 SQLAlchemy==1.3.10
 typed-ast==1.4.0
